fixing mobile text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,8 @@
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.4);
   /*margin: 25%;*/
-  min-height: 350px;
-  max-height: 350px;
+  min-height: 300px;
+  max-height: 300px;
   padding: 5%;
   flex-direction: column;
   background-size: cover;
@@ -262,4 +262,20 @@ select.minimal:focus {
 select:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 #000;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .flashcardTable {
+        box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.6);
+
+        background-color: #17bebb;
+        grid-gap: 1rem;
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(1, 1fr);
+        /*grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));*/
+        gap: 1rem;
+        padding: 5%;
+    }
 }
